--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -10,15 +10,15 @@
             {{ ruleset.local_ip.ip}}
             
             </h2>
-            <form action="/set_policy" method="get">
+            <form action="/set_policy" method="get" target="hidden-form">
                 <input type="hidden" name="id" value="{{ ruleset.local_ip.id }}"/>
-                <select name="policy" ochange="this.parentElement.submit()">
+                <select name="policy" onchange="this.parentElement.submit()">
                     {% for k,v in default_treatment_choices.items() %}
                     <option value="{{k}}" {% if ruleset.local_ip.policy == k %}selected{% endif %}>{{v}}</option>
                     {% endfor %}
                 </select>
             </form>
-            <form action="remove_local_ip" method="get">
+            <form action="remove_local_ip" method="get" target="hidden-form">
                 <input type="hidden" name="id" value="{{ ruleset.local_ip.id }}"/>
                 <input type="submit" name="delete" value="delete"/>
             </form>
@@ -28,7 +28,7 @@
                         <h4>
                             {{ rule.remote_ip }}
                         </h4>
-                        <form action="/set_treatment" method="get">
+                        <form action="/set_treatment" method="get" target="hidden-form">
                             <input type="hidden" name="id" value="{{ rule.id }}"/>
                             <select name="treatment" onchange="this.parentElement.submit()">
                                 {% for k,v in treatment_choices.items() %}
@@ -43,7 +43,7 @@
         </div>
         {% endfor %}
         <div>
-            <form action="/add_local_ip" method="get">
+            <form action="/add_local_ip" method="get" target="hidden-form">
                 <input name="ip">
                 <select name="policy">
                     {% for k,v in default_treatment_choices.items() %}
@@ -56,5 +56,6 @@
     <script type="text/javascript">
 
     </script>
+    <IFRAME style="display:none" name="hidden-form"></IFRAME>
     </body>
 </html>
